[gd_scene load_steps=4 format=3 uid="uid://cyfrly0m6uoxl"]

[ext_resource type="Script" uid="uid://ba4w3fb6aaibe" path="res://ui/shop_screen.gd" id="1_shop"]
[ext_resource type="Theme" uid="uid://c7q6510one1wh" path="res://ui/themes/Underkingdom.tres" id="2_4kj2c"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_panel"]
bg_color = Color(0.08, 0.08, 0.12, 0.98)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.8, 0.6, 0.2, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[node name="ShopScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_shop")

[node name="Dimmer" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.7)

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -500.0
offset_top = -300.0
offset_right = 500.0
offset_bottom = 300.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_4kj2c")
theme_override_styles/panel = SubResource("StyleBoxFlat_panel")

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer"]
layout_mode = 2

[node name="TitleContainer" type="VBoxContainer" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="ShopTitle" type="Label" parent="Panel/MarginContainer/VBoxContainer/TitleContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.6, 0.9, 0.6, 1)
theme_override_font_sizes/font_size = 20
text = "◆ TRADE ◆"
horizontal_alignment = 1

[node name="ShopKeeperLabel" type="Label" parent="Panel/MarginContainer/VBoxContainer/TitleContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.7, 0.7, 0.7, 1)
theme_override_font_sizes/font_size = 13
text = "Welcome!"
horizontal_alignment = 1

[node name="GoldLabel" type="Label" parent="Panel/MarginContainer/VBoxContainer/TitleContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.9, 0.7, 0.2, 1)
theme_override_font_sizes/font_size = 14
text = "Your Gold: 0"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="FilterBarContainer" type="VBoxContainer" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 2

[node name="FilterRow1" type="HBoxContainer" parent="Panel/MarginContainer/VBoxContainer/FilterBarContainer"]
layout_mode = 2
theme_override_constants/separation = 8
alignment = 1

[node name="FilterAll" type="Label" parent="Panel/MarginContainer/VBoxContainer/FilterBarContainer/FilterRow1"]
layout_mode = 2
theme_override_colors/font_color = Color(0.6, 0.9, 0.6, 1)
theme_override_font_sizes/font_size = 13
text = "[1]All"

[node name="FilterWeapons" type="Label" parent="Panel/MarginContainer/VBoxContainer/FilterBarContainer/FilterRow1"]
layout_mode = 2
theme_override_colors/font_color = Color(0.7, 0.7, 0.7, 1)
theme_override_font_sizes/font_size = 13
text = "[2]Weapons"

[node name="FilterArmor" type="Label" parent="Panel/MarginContainer/VBoxContainer/FilterBarContainer/FilterRow1"]
layout_mode = 2
theme_override_colors/font_color = Color(0.7, 0.7, 0.7, 1)
theme_override_font_sizes/font_size = 13
text = "[3]Armor"

[node name="FilterTools" type="Label" parent="Panel/MarginContainer/VBoxContainer/FilterBarContainer/FilterRow1"]
layout_mode = 2
theme_override_colors/font_color = Color(0.7, 0.7, 0.7, 1)
theme_override_font_sizes/font_size = 13
text = "[4]Tools"

[node name="FilterConsumables" type="Label" parent="Panel/MarginContainer/VBoxContainer/FilterBarContainer/FilterRow1"]
layout_mode = 2
theme_override_colors/font_color = Color(0.7, 0.7, 0.7, 1)
theme_override_font_sizes/font_size = 13
text = "[5]Consumables"

[node name="FilterRow2" type="HBoxContainer" parent="Panel/MarginContainer/VBoxContainer/FilterBarContainer"]
layout_mode = 2
theme_override_constants/separation = 8
alignment = 1

[node name="FilterMaterials" type="Label" parent="Panel/MarginContainer/VBoxContainer/FilterBarContainer/FilterRow2"]
layout_mode = 2
theme_override_colors/font_color = Color(0.7, 0.7, 0.7, 1)
theme_override_font_sizes/font_size = 13
text = "[6]Materials"

[node name="FilterAmmo" type="Label" parent="Panel/MarginContainer/VBoxContainer/FilterBarContainer/FilterRow2"]
layout_mode = 2
theme_override_colors/font_color = Color(0.7, 0.7, 0.7, 1)
theme_override_font_sizes/font_size = 13
text = "[7]Ammo"

[node name="FilterBooks" type="Label" parent="Panel/MarginContainer/VBoxContainer/FilterBarContainer/FilterRow2"]
layout_mode = 2
theme_override_colors/font_color = Color(0.7, 0.7, 0.7, 1)
theme_override_font_sizes/font_size = 13
text = "[8]Books"

[node name="FilterSeeds" type="Label" parent="Panel/MarginContainer/VBoxContainer/FilterBarContainer/FilterRow2"]
layout_mode = 2
theme_override_colors/font_color = Color(0.7, 0.7, 0.7, 1)
theme_override_font_sizes/font_size = 13
text = "[9]Seeds"

[node name="FilterMisc" type="Label" parent="Panel/MarginContainer/VBoxContainer/FilterBarContainer/FilterRow2"]
layout_mode = 2
theme_override_colors/font_color = Color(0.7, 0.7, 0.7, 1)
theme_override_font_sizes/font_size = 13
text = "[0]Misc"

[node name="HSeparator2" type="HSeparator" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 4

[node name="ContentContainer" type="HBoxContainer" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="ShopPanel" type="VBoxContainer" parent="Panel/MarginContainer/VBoxContainer/ContentContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ShopLabel" type="Label" parent="Panel/MarginContainer/VBoxContainer/ContentContainer/ShopPanel"]
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.8, 0.5, 1)
theme_override_font_sizes/font_size = 15
text = "══ SHOP INVENTORY ══"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="Panel/MarginContainer/VBoxContainer/ContentContainer/ShopPanel"]
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="Panel/MarginContainer/VBoxContainer/ContentContainer/ShopPanel"]
layout_mode = 2
size_flags_vertical = 3

[node name="ShopList" type="VBoxContainer" parent="Panel/MarginContainer/VBoxContainer/ContentContainer/ShopPanel/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="VSeparator" type="VSeparator" parent="Panel/MarginContainer/VBoxContainer/ContentContainer"]
layout_mode = 2

[node name="PlayerPanel" type="VBoxContainer" parent="Panel/MarginContainer/VBoxContainer/ContentContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="PlayerLabel" type="Label" parent="Panel/MarginContainer/VBoxContainer/ContentContainer/PlayerPanel"]
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.8, 0.5, 1)
theme_override_font_sizes/font_size = 15
text = "══ YOUR INVENTORY ══"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="Panel/MarginContainer/VBoxContainer/ContentContainer/PlayerPanel"]
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="Panel/MarginContainer/VBoxContainer/ContentContainer/PlayerPanel"]
layout_mode = 2
size_flags_vertical = 3

[node name="PlayerList" type="VBoxContainer" parent="Panel/MarginContainer/VBoxContainer/ContentContainer/PlayerPanel/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="HSeparator2" type="HSeparator" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="ActionsContainer" type="HBoxContainer" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="BuyButton" type="Button" parent="Panel/MarginContainer/VBoxContainer/ActionsContainer"]
layout_mode = 2
text = "BUY (ENTER)"
flat = true

[node name="SellButton" type="Button" parent="Panel/MarginContainer/VBoxContainer/ActionsContainer"]
layout_mode = 2
text = "SELL (S)"
flat = true

[node name="HSeparator3" type="HSeparator" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="HelpLabel" type="Label" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.6, 0.6, 0.6, 1)
theme_override_font_sizes/font_size = 13
text = "[Tab] Switch  |  [+/-] Quantity  |  [Enter] Buy  |  [S] Sell  |  [Esc] Close"
horizontal_alignment = 1
